Fix art dialog img wrong size

--- a/app/styles/common.css
+++ b/app/styles/common.css
@@ -966,6 +966,15 @@ abbr[title] {
 	color: #fff;
 }
 
+.art__dialog__img {
+	max-width: 100%;
+	max-height: 75vh;
+	width: 100%;
+	height: auto;
+	object-fit: contain;
+	display: block;
+}
+
 .art__dialog__image-container img {
 	max-width: 100%;
 	max-height: 100%;
